@startuml

title __SERVICE's Class Diagram__\n

  package  {
    package com.maximaLibri.maximaLibriV2 {
      package com.maximaLibri.maximaLibriV2.service {
        class BookService {
            + getAllBooks()
            + getBookById()
            + saveBook()
            + getTop10()
            + getBookAndRatingById()
            + getBookRatingByUserAndIsbn()
            + saveBookRating()
            + saveBookRating()
            + getSearchResults()
            + getBookDescription()
            + getKeywordsForBook()
            + getReview()
            + saveReview()
            + getReviewsForBook()
            + deleteReview()
        }
      }
    }
  }
  

  package  {
    package com.maximaLibri.maximaLibriV2 {
      package com.maximaLibri.maximaLibriV2.service {
        class EmailSenderService {
            - javaMailSender : JavaMailSender
            + EmailSenderService()
            + sendEmail()
        }
      }
    }
  }
  

  package  {
    package com.maximaLibri.maximaLibriV2 {
      package com.maximaLibri.maximaLibriV2.service {
        class UserService {
            - passwordEncoder : BCryptPasswordEncoder
            + findByEmail()
            + save()
            + save()
            + encodePassword()
            + loadUserByUsername()
            - mapRolesToAuthorities()
            + getHistory()
            + rateBook()
            + findByUsername()
            + findById()
            + disableUserById()
            + enableUserById()
            + getReviewsByUser()
            + getUserByUsername()
        }
      }
    }
  }
  

  BookService o-- BookRepository : bookRepository
  BookService o-- BookRatingRepository : bookRatingRepository
  BookService o-- ReviewRepository : reviewRepository
  UserService -up-|> UserDetailsService
  UserService o-- UserRepository : userRepository
  UserService o-- RoleRepository : roleRepository
  UserService o-- BookRatingRepository : bookRatingRepository
  UserService o-- ReviewRepository : reviewRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
